crates/patok-tui/tests/snapshots/ui__dialog__command_error_keeps_the_input.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
    ┌ What do you want to do? ────────────────────────────────────── [ x ] ┐   │
[   │do it                                                                 │   │
    │                                                                      │   │
[  B│                                                                      │   │
    │                                                                      │───┘
[  R│                                                                      │───┐
    │                                                                      │   │
[   │                                                                      │   │
[ Di│                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │a build is running                                                    │   │
    │ ↑↓←→ move · Shift-Enter new line ·   [ Enter ] Submit  [ Esc ] Close │   │
    └──────────────────────────────────────────────────────────────────────┘   │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
