crates/patok-tui/tests/snapshots/ui__dialog__dialog_with_cursor_mid_text.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
    ┌ What do you want to do? ────────────────────────────────────── [ x ] ┐   │
[   │add a login page                                                      │   │
    │and a logout button                                                   │   │
[  B│                                                                      │   │
    │                                                                      │───┘
[  R│                                                                      │───┐
    │                                                                      │   │
[ Di│                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │ ↑↓←→ move · Shift-Enter new line ·   [ Enter ] Submit  [ Esc ] Close │   │
    └──────────────────────────────────────────────────────────────────────┘   │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
