crates/patok-tui/tests/snapshots/ui__dialog__enter_on_empty_input_keeps_the_inline_refusal.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
    ┌ What do you want to do? ────────────────────────────────────── [ x ] ┐   │
[   │Press Enter to run Discovery agent                                    │   │
    │                                                                      │   │
[  B│                                                                      │   │
    │                                                                      │───┘
[  R│                                                                      │───┐
    │                                                                      │   │
[ Di│                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │Nothing to submit -- type a request first.                            │   │
    │ ↑↓←→ move · Shift-Enter new line ·    [ Enter ] Start  [ Esc ] Close │   │
    └──────────────────────────────────────────────────────────────────────┘   │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
