crates/patok-tui/tests/snapshots/ui__dialog__inject_modal_empty.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
    ┌ Inject a task ──────────────────────────────────────────────── [ x ] ┐   │
[   │Type the task; it lands as an unchecked task line                     │   │
    │                                                                      │   │
[  B│                                                                      │   │
    │                                                                      │───┘
[  R│                                                                      │───┐
    │                                                                      │   │
[ Di│                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │ ↑↓←→ move · Shift-Enter new line ·   [ Enter ] Inject  [ Esc ] Close │   │
    └──────────────────────────────────────────────────────────────────────┘   │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint  Enter  start build  ?  settings  t  theme  d  detach  q  quit
