crates/patok-tui/tests/snapshots/ui__dialog__inject_modal_with_text.snap
---
source: crates/patok-tui/tests/ui.rs
expression: "draw(&app, 80, 24)"
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
    ┌ Inject a task ──────────────────────────────────────────────── [ x ] ┐   │
[   │- [ ] T78.1: Polish the README                                        │   │
    │                                                                      │   │
[  B│                                                                      │   │
    │                                                                      │───┘
[  R│                                                                      │───┐
    │                                                                      │   │
[ Di│                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │                                                                      │   │
    │ ↑↓←→ move · Shift-Enter new line ·   [ Enter ] Inject  [ Esc ] Close │   │
    └──────────────────────────────────────────────────────────────────────┘   │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                    Enter  start build  m  menu
