crates/patok-tui/tests/snapshots/ui__dialog__planner_error_on_the_dashboard.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Planner ─────────────────────────────────────────────────────────┐
[ Research ]│Reading TASKS.md to see what exists.                              │
      ↓     │▸ Edit TASKS.md                                                   │
[   Plan   ]│planner result rejected: task T1.1 was modified; restored         │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[ Discover ]│○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                    Enter  start build  m  menu
