crates/patok-tui/tests/snapshots/ui__dialog__planner_running_on_the_dashboard.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Planner ────────────────────────────────────────────────── 00:00 ┐
[ Research ]│Reading TASKS.md to see what exists.                              │
      ↓     │▸ Edit TASKS.md                                                   │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     │                                                                  │
[  Review  ]│                                                                  │
            │                                                                  │
[ Discover ]│                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │                                                                  │
            │ ↑↓ scroll · PgUp/PgDn page · End follow · Tab tasks              │
            └──────────────────────────────────────────────────────────────────┘
            ┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
            │○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │                                                                  │
            │                                                                  │
            └──────────────────────────────────────────────────────────────────┘
 PLANNING  sprint                                             Planner running...
